Esquema de toda la pagina con bootstrap

--- a/Servidor/ux/html/admin.html
+++ b/Servidor/ux/html/admin.html
@@ -270,9 +270,9 @@
                     <!----------------------------------- TARJETA CON TODOS LOS SENSORES ----------------------------------------->
 
 
-                    <div class="row-lg-6">
+                    <div class="fila row-lg-6 my-auto pb-3">
 
-                        <div class="tarjetaInfo shadow bg-white rounded">
+                        <div class="tarjetaInfo shadow bg-white rounded my-auto">
 
 
 
@@ -282,9 +282,9 @@
 
                     <!----------------------------------- TARJETA CON INFORMACION DE UN SENSOR ----------------------------------------->
 
-                    <div class="row-lg-6">
+                    <div class="fila row-lg-6 my-auto">
 
-                        <div class="tarjetaInfo shadow bg-white rounded">
+                        <div class="tarjetaInfo shadow bg-white rounded my-auto">
 
 
 
@@ -298,7 +298,7 @@
 
                 <!----------------------------------- MAPA ----------------------------------------->
 
-                <div class="col">
+                <div class="columnaMapa col">
 
                     <div class="contenedorMapa shadow bg-white rounded">
 
