Añadidos iconos naranjas al pasar el cursor por los botones de editar

--- a/Servidor/ux/html/admin.html
+++ b/Servidor/ux/html/admin.html
@@ -306,13 +306,13 @@
 
                                     <div class="contenedorIconosEditar col-1 my-auto">
 
-                                        <img src="../images/add.png" class="iconosEditar">
+                                        <img src="../images/add.png" class="iconoAdd">
 
                                     </div>
 
                                     <div class="contenedorIconosEditar col-1 my-auto">
 
-                                        <img src="../images/can.png" class="iconosEditar">
+                                        <img src="../images/can.png" class="iconoCan">
 
 
                                     </div>
