Creada logicaAdministracion.js
Contendrá los metodos relacionados con con obtener todos los sensores, buscar sensores y coger informacion de un sensor para mostrarla en el Front End

--- a/Servidor/ux/html/admin.html
+++ b/Servidor/ux/html/admin.html
@@ -13,6 +13,8 @@
 
     <script>
         var proxy = new Proxy();
+        
+        var admin = new logicaAdministracion();
 
         function setCookie(cname, cvalue) {
             //var d = new Date();
