Retocado el diseño
voy a por el for :)

--- a/Servidor/ux/html/admin.html
+++ b/Servidor/ux/html/admin.html
@@ -29,15 +29,7 @@
                 console.log("Primer sensor " + sensores[0]);
 
                 crearElementosLista();
-                crearElementosLista();
-                crearElementosLista();
-                crearElementosLista();
-                crearElementosLista();
-                crearElementosLista();
-                crearElementosLista();
-                crearElementosLista();
-                crearElementosLista();
-                crearElementosLista();
+                
                 console.log("numero del sensor: " + i);
 
             });
@@ -249,13 +241,13 @@
 
                         </div>
 
-                        <div class="textoTarjeta my-auto">
+                        <div class="textoTarjeta my-auto font-weight-bold">
 
                             Número de sensores
 
                         </div>
 
-                        <div class="valorTarjeta my-auto">
+                        <div class="valorTarjeta my-auto font-weight-bold">
 
                             232
 
@@ -278,13 +270,13 @@
 
                         </div>
 
-                        <div class="textoTarjeta my-auto">
+                        <div class="textoTarjeta my-auto font-weight-bold">
 
                             Sensores<br>activos
 
                         </div>
 
-                        <div class="valorTarjeta my-auto">
+                        <div class="valorTarjeta my-auto font-weight-bold">
 
                             232
 
@@ -300,19 +292,19 @@
 
                     <div class="tarjeta shadow bg-white rounded my-auto">
 
-                        <div class="iconoTarjeta my-auto">
+                        <div class="iconoTarjeta my-auto ">
 
                             <img src="../images/cross2.png" class="icono">
 
                         </div>
 
-                        <div class="textoTarjeta my-auto">
+                        <div class="textoTarjeta my-auto font-weight-bold">
 
                             Sensores<br>inactivos
 
                         </div>
 
-                        <div class="valorTarjeta my-auto">
+                        <div class="valorTarjeta my-auto font-weight-bold">
 
                             232
 
@@ -334,13 +326,13 @@
 
                         </div>
 
-                        <div class="textoTarjeta my-auto">
+                        <div class="textoTarjeta my-auto font-weight-bold">
 
                             Sensores<br>en stock
 
                         </div>
 
-                        <div class="valorTarjeta my-auto">
+                        <div class="valorTarjeta my-auto font-weight-bold">
 
                             232
 
@@ -419,25 +411,25 @@
 
                                     <div class="nombresLista row mr-0 ml-0 border-bottom">
 
-                                        <div class="columnasInfoSensor col-1">
+                                        <div class="columnasInfoSensor col-1 font-weight-bold">
 
                                             Estado
 
                                         </div>
 
-                                        <div class="columnasInfoSensor col-2">
+                                        <div class="columnasInfoSensor col-2 font-weight-bold">
 
                                             Tipo
 
                                         </div>
 
-                                        <div class="columnasInfoSensor col-4">
+                                        <div class="columnasInfoSensor col-4 font-weight-bold">
 
                                             Id sensor
 
                                         </div>
 
-                                        <div class="columnasInfoSensor col-5">
+                                        <div class="columnasInfoSensor col-5 font-weight-bold">
 
                                             Usuario
 
