--- a/Servidor/ux/html/index.html
+++ b/Servidor/ux/html/index.html
@@ -140,9 +140,9 @@
                  var contentString = '<div id="content">'+
                   '<div id="siteNotice">'+
                   '</div>'+
-                  '<h1 id="firstHeading" class="firstHeading">'+datos[i].Valor.toString()+'</h1>'+
+                  '<h1 id="firstHeading" class="firstHeading">'+datos[i].Valor.toString()+' ppb</h1>'+
                   '<div id="bodyContent">'+
-                  '<p><b>'+queGasSoy(datos[i].IdTipoMedida)+' ppb</b></p>'+
+                  '<p><b>'+queGasSoy(datos[i].IdTipoMedida)+'</b></p>'+
                   '<p></p>'+
                   '</div>'+
                   '</div>';
@@ -337,7 +337,7 @@
                 <p class="text-muted">Diseñador Principal</p>
             </div>
             <div class="col">
-                <img src="../images/imagen_equipo2.jpg" width="120" alt="" class="redonda">
+                <img src="../images/team-diego.jpg" width="120" alt="" class="redonda">
                 <h5 class="mt-3">Diego</h5>
                 <p class="text-muted">Desarrollador Web</p>
             </div>
@@ -347,7 +347,7 @@
                 <p class="text-muted">Scrum Master</p>
             </div>
             <div class="col">
-                <img src="../images/imagen_equipo2.jpg" width="120" alt="" class="redonda">
+                <img src="../images/team-ivan.jpeg" width="120" alt="" class="redonda">
                 <h5 class="mt-3">Iván</h5>
                 <p class="text-muted">Desarrollador App</p>
             </div>
