--- a/Servidor/ux/html/index.html
+++ b/Servidor/ux/html/index.html
@@ -332,7 +332,7 @@
         <h1 class="mb-5 text-uppercase">Nuestro Equipo</h1>
         <div class="row">
             <div class="col">
-                <img src="../images/team-ivan.jpeg" width="120" alt="" class="redonda">
+                <img src="../images/team-matt.jpeg" width="120" alt="" class="redonda">
                 <h5 class="mt-3">Matt</h5>
                 <p class="text-muted">Diseñador Principal</p>
             </div>
