Recien hecho el merge
Cambio de clase del mapa de admin de map a mapAdmin

--- a/Servidor/ux/html/admin.html
+++ b/Servidor/ux/html/admin.html
@@ -738,7 +738,7 @@
 
                     <div class="contenedorMapa shadow bg-white rounded">
 
-                        <div class="map" id="map">
+                        <div class="mapAdmin" id="map">
 
                         </div>
 
