--- a/Servidor/ux/html/index.html
+++ b/Servidor/ux/html/index.html
@@ -200,7 +200,7 @@
     <![endif]-->
 </head>
 
-<body id="page-top" onload="checkCookie()">
+<body id="page-top">
 
     <!------------------------------------------------ NAVBAR -------------------------------------------------------->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top fondoOscuro" id="mainNav">
