cambiado estilo textos para no interferir con los de index.html

--- a/Servidor/ux/html/admin.html
+++ b/Servidor/ux/html/admin.html
@@ -349,6 +349,7 @@
                 </div>
             </nav>
 
+
         </div>
 
         <!------------------------------------------------ CUERPO -------------------------------------------------------->
@@ -510,7 +511,7 @@
 
                                     <div class="contenedorSearch col-7 my-auto">
 
-                                        <input class="form-control form-control-sm ml-3 w-75 text-light" type="text" placeholder="Buscar palabras clave..." aria-label="Search">
+                                        <input class="cajaDeTexto form-control form-control-sm ml-3 w-75 text-light" type="text" placeholder="Buscar palabras clave..." aria-label="Search">
 
                                     </div>
 
