ptos mapa admin

--- a/Servidor/ux/html/index.html
+++ b/Servidor/ux/html/index.html
@@ -168,7 +168,7 @@
                 heatmap.setMap(getMap());
         });
     }
-        recibirMedidasFecha({"desde":1574370642574, "hasta": 1574370643015});
+        recibirMedidasFecha({"desde":0, "hasta": 1574386240247});
 
     </script>
 
